--- a/package.json
+++ b/package.json
@@ -13,22 +13,30 @@
     "expo": "^35.0.0",
     "expo-font": "^7.0.0",
     "loadash": "^1.0.0",
+    "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-dom": "16.8.3",
+    "react-flow-player": "^1.2.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-datepicker": "^1.6.0",
     "react-native-dropdown-menu": "^1.1.0",
     "react-native-elements": "^0.19.0",
+    "react-native-gesture-handler": "^1.5.0",
+    "react-native-htmlview": "^0.15.0",
     "react-native-modal-datetime-picker": "^7.6.0",
     "react-native-phone-call": "^1.0.4",
     "react-native-pull-to-refresh": "^2.1.3",
+    "react-native-reanimated": "^1.4.0",
     "react-native-storage": "^0.2.2",
     "react-native-table-component": "^1.1.3",
     "react-native-table-component-pro": "^1.0.1",
     "react-native-tableview-simple": "^0.17.2",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-video": "^5.0.2",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
+    "react-navigation-drawer": "^2.3.3",
+    "react-navigation-stack": "^1.10.3",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
