--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "^10.0.6",
+    "@expo/vector-icons": "^10.0.0",
     "eslint-cli": "^1.1.1",
-    "expo": "^35.0.0",
-    "expo-font": "^7.0.0",
+    "expo": "^39.0.0",
+    "expo-font": "~8.3.0",
     "loadash": "^1.0.0",
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
-    "react-native-appearance": "^0.2.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.0.tar.gz",
+    "react-native-appearance": "~0.3.3",
     "react-native-datepicker": "^1.6.0",
     "react-native-dropdown-menu": "^1.1.0",
     "react-native-elements": "^0.19.0",
+    "react-native-game-engine": "^1.2.0",
     "react-native-modal-datetime-picker": "^7.6.0",
     "react-native-phone-call": "^1.0.4",
     "react-native-pull-to-refresh": "^2.1.3",
@@ -28,14 +29,11 @@
     "react-native-table-component-pro": "^1.0.1",
     "react-native-tableview-simple": "^0.17.2",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-web": "^0.11.7",
+    "react-native-web": "~0.13.7",
     "react-navigation": "^4.0.10",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "whatwg-fetch": "2.0.4"
-  },
-  "devDependencies": {
-    "babel-preset-expo": "^7.1.0"
   }
 }
