--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.0",
+    "@react-native-community/datetimepicker": "^3.0.3",
     "eslint-cli": "^1.1.1",
     "expo": "^39.0.0",
     "expo-font": "~8.3.0",
