prev version changes

--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
       "android",
       "web"
     ],
-    "version": "12",
+    "version": "16",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -28,8 +28,10 @@
     },
     "android": {
       "package": "com.sagrad.surimobileinfo",
-      "versionCode": 12,
-      "permissions": []
+      "googleServicesFile": "./google-services.json",
+      "versionCode": 16,
+      "permissions": [],
+      "useNextNotificationsApi": true
     }
   }
 }
