--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "whatwg-fetch": "2.0.4"
+    "whatwg-fetch": "2.0.4",
+    "expo-notifications": "~0.7.2"
   }
 }
