--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.0",
-    "@react-native-community/datetimepicker": "^3.0.3",
+    "@react-native-community/datetimepicker": "^3.5.2",
     "eslint-cli": "^1.1.1",
     "expo": "^39.0.0",
     "expo-font": "~8.3.0",
+    "expo-notifications": "~0.7.2",
     "loadash": "^1.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -35,7 +36,6 @@
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "whatwg-fetch": "2.0.4",
-    "expo-notifications": "~0.7.2"
+    "whatwg-fetch": "2.0.4"
   }
 }
